Reviewed by Antti.

Fixes: http://bugs.webkit.org/show_bug.cgi?id=17736

JS wrapper objects around SVG POD types, that contain other SVG POD types with writable properties
failed to update. Modification of the values were completly ignored (ie. transform.matrix.a = 50, didn't take any effect)

Added tests: svg/custom/svg-modify-currentTranslate.html
             svg/custom/tearoffs-with-tearoffs.html
             svg/custom/immutable-properties.html

Fixed tests: svg/dynamic-updates/SVGLinearGradientElement-svgdom-gradientTransform-prop.html


Canonical link: https://commits.webkit.org/28083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35674 268f45cc-cd09-0410-ab3c-d52691b4dbfc